# timber-prices

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: DATA_GAPS.md  TIMBER_MARKET_REGIONS.md
scripts/: combine_stumpage_data.py  debug_final_missing.py  debug_missing_pdfs.py  download_nh_advanced.py  download_nh_pdfs_httpx.py  download_nh_stumpage.py  download_nh_with_urllib.py  examine_2004_pdf.py  examine_ga_dor_pdf.py  examine_historical_pdf.py  examine_ms_pdf.py  examine_ms_pdf_v2.py  examine_ohio_pdf.py  examine_texas_pdfs.py  final_ohio_summary.py  final_summary.py  integrate_tn_forestry.py  integrate_usfs_pnw.py  nh_stumpage_workflow.py  open_nh_download_page.py  parse_nh_stumpage.py  parse_texas_stumpage.py  parse_tn_timber_sales.py  summarize_ohio_data.py  unit_conversion_factors.py  validate_ga_dor_data.py  verify_texas_data.py
src/: analyze_stumpage_data.py  test_parser_demo.py
src/forest_rents/: __init__.py
src/timber_prices/: __init__.py  regions.py
