[project]
name = "forest-rents"
version = "0.1.0"
description = "Forest Land Rents Dataset - County-level net returns for timberland"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    "geopandas>=0.14",
    "rasterio>=1.3",
    "rasterstats>=0.19",
    "xarray>=2024.1",
    "netCDF4>=1.6",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "folium>=0.15",
    "rich>=13.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pyarrow>=15.0",
    "tqdm>=4.66",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pdfplumber>=0.11.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ipython>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forest_rents"]
